--- a/Twitter analysis.ipynb
+++ b/Twitter analysis.ipynb
@@ -22,8 +22,8 @@
    },
    "outputs": [],
    "source": [
-    "auth = tweepy.OAuthHandler('lXhEHrIPhWNyytwyorOUyGaoF' , 'BqyetyjOefzNGeDYRZhngHHVkHW16Bm27h5PfztbLI2FJ6Ykhq' )\n",
-    "auth.set_access_token('2644918766-DQBIHIjLO7KgfLSpwfrzbX9FezxsDIAooiZfEeJ', 'ujnMAyl6oiCfFmMwX3woLeN3JsoLWokmsCVayCMHfXlFv')\n",
+    "auth = tweepy.OAuthHandler('' , '' )\n",
+    "auth.set_access_token('-', '')\n",
     "api = tweepy.API(auth)"
    ]
   },
@@ -275,7 +275,7 @@
     "\n",
     "dbschema='raw' \n",
     "engine = create_engine(\n",
-    "    'postgresql://postgres:DaVe23101993@localhost:5432/postgres',\n",
+    "    'postgresql://postgres:@localhost:5432/postgres',\n",
     "    connect_args={'options': '-csearch_path={}'.format(dbschema)})\n",
     "engine.connect()"
    ]
